FIX - visibility animation elements

--- a/markup/components/modal/modal.scss
+++ b/markup/components/modal/modal.scss
@@ -89,6 +89,11 @@
   border-radius: 100px;
   border:none;
 
+  -webkit-transition: all .35s ease;
+  -moz-transition: all .35s ease;
+  -o-transition: all .35s ease;
+  transition: all .35s ease;
+
   &:hover{
     background-color: darken($color-link-hover, 10%);
   }
