--- a/markup/components/offers/offers.scss
+++ b/markup/components/offers/offers.scss
@@ -22,6 +22,7 @@
 }
 
 .offer-item{
+  visibility: hidden;
   width: 25%;
 }
 
