--- a/markup/components/title-page/title-page.scss
+++ b/markup/components/title-page/title-page.scss
@@ -20,6 +20,7 @@
   padding: 0;
   text-align: center;
   text-transform: uppercase;
+  visibility: hidden;
 }
 
 .title-row{
